--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "aws/aws-sdk-php": "^3.331",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "league/flysystem-aws-s3-v3": "3.0"
+        "league/flysystem-aws-s3-v3": "3.0",
+        "league/flysystem-sftp-v3": "3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
